[package]
name = "solana_test"
version = "0.1.0"
authors = ["Ting-Rui, Wang <qwe50120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.6.6"
solana-sdk = "1.6.6"
solana-account-decoder = "1.6.6"
solana-runtime = "1.6.6"
solana-program = "1.6.6"
solana-transaction-status = "1.6.6"
solana-clap-utils = "1.6.6"
spl-token = "3.1.0"
spl-token-swap = "2.1.0"
dotenv = "0.15.0"
bincode = "1.3.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde-big-array = "0.3.2"

[profile.release]
opt-level = "z"
lto = true
